--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">2048</string>
-    <string name="score">score: </string>
+    <string name="score">得分 : </string>
 </resources>
